# bevy-thing

./: Cargo.toml  shell.nix
.cargo/: config.toml
src/: biome_config.rs  main.rs  noise.rs  utils.rs
