[package]
name = "bevy-game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", features = ["dynamic_linking"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
noise = "0.9.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
